--- a/1group.html
+++ b/1group.html
@@ -1,1 +1,45 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+    <title>Моя группа</title>
+</head>
+<body>
+    <div class="container">
+        <div class="logo">
+            <a class="link" href="index.html">
+                <img class="logo__img" src="прыщ2.jpg" alt="logo"> 
+            </a>
+        </div>
+    
+        <div class="main__info">
+            <div class="info">1 под группа</div>
+        </div>
+
+        <div class="links">
+            <div class="main__blocks">
+                    <div class="block__link">
+                        <div class="link__text"></div>
+                    </div>
+            </div>
+
+            <div class="secondary__blocks">
+                <div class="block">
+                    <div class="link__text">Донатик</div>
+                </div>
+                
+                <a class="link" href="https://www.donationalerts.com/r/lyoshalast" target="_blank">
+                    <div class="block__link">
+                        <div class="link__text">Донат</div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
 
