--- a/1group.html
+++ b/1group.html
@@ -23,7 +23,7 @@
         <div class="links">
             <div class="main__blocks">
                     <div class="block__link">
-                        <div class="link__text"></div>
+                        <div class="link__text">1. Абутова Зарина 2. Арсаев Равиль 3. Артаманов Максим 4. Бычков Борис 5. Ворошилов Артём 6. Ғалымжан Ернұр 7. Джетпыспаев Султан 8. Әуесхан Марғұлан 9. Инамов Илхан 10. Исина Дария 11. Касьянова Вероника 12. Ким Роман</div>
                     </div>
             </div>
 
