--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 
         <div class="links">
             <div class="main__blocks">
-                <a class="link" href="https://www.youtube.com/@last_ntp" target="_blank">
+                <a class="link" href="1group.html" target="_blank">
                     <div class="block__link">
                         <div class="link__text">1 под группа</div>
                     </div>
                 </a>
 
-                 <a class="link" href="https://www.youtube.com/@last_ntp" target="_blank">
+                 <a class="link" href="2group.html" target="_blank">
                       <div class="block__link">
                           <div class="link__text">2 под группа</div>
                       </div>
