--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="logo">
             <a class="link" href="index.html">
-                <img class="logo__img" src="прыщ2.jpg" alt="logo"> 
+                <img class="logo__img" src="прыщ2.JPG" alt="logo"> 
             </a>
         </div>
     
