--- a/1group.html
+++ b/1group.html
@@ -22,8 +22,8 @@
 
         <div class="links">
             <div class="main__blocks">
-                    <div class="block__list">
-                        <div class="list__text">1. Абутова Зарина 2. Арсаев Равиль 3. Артаманов Максим 4. Бычков Борис 5. Ворошилов Артём 6. Ғалымжан Ернұр 7. Джетпыспаев Султан 8. Әуесхан Марғұлан 9. Инамов Илхан 10. Исина Дария 11. Касьянова Вероника 12. Ким Роман</div>
+                    <div class="block__link">
+                        <div class="link__list">1. Наумов Никита 2. Нурдунов  Джамиль 3. Петренко Александра 4. Пономарёв Никита 5. Прищепный Никита 6. Рамиль Амина 7. Сафаргалиев Наиль 8. Сейсембаева Жәнел 9. Серік Сардар 10. Серікқұл Мерей 11. Сәбит Еңлік 12. Тәйтен Бекнұр 13. Чмых Алексей</div>
                     </div>
             </div>
 
