--- a/2group.html
+++ b/2group.html
@@ -22,9 +22,7 @@
 
         <div class="links">
             <div class="main__blocks">
-                    <div class="block__link">
-                        <div class="link__list">1. Наумов Никита 2. Нурдунов  Джамиль 3. Петренко Александра 4. Пономарёв Никита 5. Прищепный Никита 6. Рамиль Амина 7. Сафаргалиев Наиль 8. Сейсембаева Жәнел 9. Серік Сардар 10. Серікқұл Мерей 11. Сәбит Еңлік 12. Тәйтен Бекнұр 13. Чмых Алексей</div>
-                    </div>
+                <div class="link__list" style="color: #151515; font-size:"40px">1. Наумов Никита 2. Нурдунов  Джамиль 3. Петренко Александра 4. Пономарёв Никита 5. Прищепный Никита 6. Рамиль Амина 7. Сафаргалиев Наиль 8. Сейсембаева Жәнел 9. Серік Сардар 10. Серікқұл Мерей 11. Сәбит Еңлік 12. Тәйтен Бекнұр 13. Чмых Алексей</div>
             </div>
 
             <div class="secondary__blocks">
