--- a/1group.html
+++ b/1group.html
@@ -22,8 +22,7 @@
 
         <div class="links">
             <div class="main__blocks">
-                    <div class="block__link">
-                        <div class="link__list">1. Абутова Зарина 
+                        <div class="link__list" style="color: #151515; font-size:"40px">1. Абутова Зарина 
 2. Арсаев Равиль 
 3. Артаманов Максим 
 4. Бычков Борис 
@@ -36,8 +35,8 @@
 11. Касьянова Вероника 
 12. Ким Роман 
 </div>
-                    </div>
-            </div>
+    </div>
+           
 
             <div class="secondary__blocks">
                 <div class="block">
